function createFile that creates a file with the name and the content